added unit test and fixed helm deployment
